syntax = "proto3";
package rpc;
option go_package = "proto/gen";

message PutRequest {
    bytes key = 1;
    bytes val = 2;
}

message GetRequest {
    bytes key = 1;
}

message GetResponse {
    bytes val = 1;
    bool success = 2;
    bytes routing_table = 3;
}

message PutResponse {
    bool success = 1;
    bytes routing_table = 2;
}

service Kv {
    rpc Put(PutRequest) returns (PutResponse) {}
    rpc Get(GetRequest) returns (GetResponse) {}
}